Fix for quoted fq values and alignment of simple/adv search box.
git-svn-id: http://ala-hubs.googlecode.com/svn/trunk/hubs-webapp@1043 1df052cb-f7c2-36cd-ec53-7bc1070de0c5

--- a/src/main/webapp/css/tabs-no-images.css
+++ b/src/main/webapp/css/tabs-no-images.css
@@ -76,7 +76,7 @@ ul.css-tabs a.current {
 
 #content3 {
     /*width: 95%;*/
-    padding: 0 15px;
+    padding: 0;
     margin-bottom: 20px;
 }
 
